# OpenCV-Labs

Lab-7/: CMakeLists.txt
Lab-7/doc/: ICP3038_Lab_07.tex
Lab-7/src/: displayImage.cxx  gaussianFilter.cxx  logScale.cxx  meanFilter.cxx  medianFilter.cxx  rgb2grey.cxx
Lab-8/: CMakeLists.txt
Lab-8/doc/: ICP3038_Lab_08.tex
Lab-8/src/: edgeDetection1.cxx  edgeDetection2.cxx  edgeDetection3.cxx
Lab-9/: videoFromFile.cxx
